week2/demo-vote-advance/k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - image: vicchui/worker:env
          imagePullPolicy: Always
          name: worker
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "1280Mi"
              cpu: "1000m"
