week2/demo-vote-advance/k8s-specifications/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: result
spec:
  rules:
    - host: result.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
  ingressClassName: nginx
