week2/demo-vote-advance/k8s-specifications/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vote
spec:
  rules:
    - host: vote.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 5000
  ingressClassName: nginx
